--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <figure id="v1">
         <h3 style="font-size:50px"><b>Vrindavan</b></h3>
       
-    <img src="prem.jpeg" height="300px" width="500px">
+    <img src="images/prem.jpeg" height="300px" width="500px">
    
     <img src="images/prem2.jpeg" height="300px" width="470px">
     <img src="images/iscon.jpeg" height="300px" width="500px">
