--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </table>
 <br><br>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113274.60344111623!2d77.61411212729102!3d27.474509136834037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397371163d4d5205%3A0x4273a09defe10ea5!2sMathura%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1674105896314!5m2!1sen!2sin" width="1560px" height="700px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113274.60344111623!2d77.61411212729102!3d27.474509136834037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397371163d4d5205%3A0x4273a09defe10ea5!2sMathura%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1674105896314!5m2!1sen!2sin" width="1000px" height="700px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
 
 </section>
 <br><br><br>
